[gd_scene load_steps=5 format=4 uid="uid://bua2w8mprv7s"]

[ext_resource type="Script" uid="uid://knuw7jsadd3n" path="res://Prefab/GUI/LevelEditor/WaveEditor/PacketContainer/LevelEditorWaveEditorPacketContainer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cwk7ai6cvx44r" path="res://Asset/Texture/GUI/Almanac/AlmanacPropBox.png" id="2"]
[ext_resource type="PackedScene" uid="uid://dfwrdoxe03ifh" path="res://Prefab/TowerDefense/GUI/InGame/Packet/TowerDefenseInGamePacketSlot.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="4"]

[node name="LevelEditorWaveEditorPacketContainer" type="HBoxContainer"]
anchor_right = 0.698
anchor_bottom = 0.16
offset_right = 0.159973
script = ExtResource("1")

[node name="AlmanacPropBox" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(540, 96)
layout_mode = 2
texture = ExtResource("2")
patch_margin_left = 49
patch_margin_top = 48
patch_margin_right = 74
patch_margin_bottom = 48

[node name="ScrollContainer" type="ScrollContainer" parent="AlmanacPropBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 528.0
offset_bottom = 91.0
scroll_deadzone = 20

[node name="MarginContainer" type="MarginContainer" parent="AlmanacPropBox/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 32

[node name="PacketSlotContainer" type="HBoxContainer" parent="AlmanacPropBox/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(969, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 51

[node name="TowerDefenseInGamePacketSlot" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot2" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot3" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot4" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot5" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot6" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot7" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot8" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot9" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot10" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot11" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot12" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot13" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot14" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot15" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot16" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot17" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot18" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot19" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot20" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot21" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot22" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot23" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot24" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot25" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot26" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot27" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot28" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot29" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot30" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot31" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot32" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot33" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot34" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot35" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot36" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot37" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot38" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot39" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot40" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot41" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot42" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot43" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot44" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot45" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot46" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot47" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot48" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot49" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="TowerDefenseInGamePacketSlot50" parent="AlmanacPropBox/ScrollContainer/MarginContainer/PacketSlotContainer" instance=ExtResource("3")]
layout_mode = 2
mouse_filter = 2

[node name="PacketContainer" type="HBoxContainer" parent="AlmanacPropBox/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(969, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 51

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="MainButton" parent="VBoxContainer" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "编辑对象池"

[node name="TextLabel" parent="VBoxContainer/MainButton" index="0"]
offset_right = 110.0
text = "编辑对象池"

[connection signal="pressed" from="VBoxContainer/MainButton" to="." method="Selected"]

[editable path="VBoxContainer/MainButton"]
